--- a/popup.html
+++ b/popup.html
@@ -3,98 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>Selenium POM Recorder - Popup</title>
+  <title>Locator Recorder</title>
   <style>
-    body {
-      margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      width: 360px; min-height: 480px; background: #f4f4f8; color: #222;
-      display: flex; flex-direction: column;
-      padding: 8px;
-      box-sizing: border-box;
-    }
-    #urlSection {
-      display: flex;
-      margin-bottom: 8px;
-      gap: 8px;
-    }
-    #url-input {
-      flex-grow: 1;
-      padding: 6px 8px;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    #load-url-button {
-      background: #3f51b5;
-      color: white;
-      border: none;
-      padding: 6px 12px;
-      border-radius: 4px;
-      font-weight: 600;
-      cursor: pointer;
-      user-select: none;
-      transition: background-color 0.3s;
-    }
-    #load-url-button:hover {
-      background: #2c3e9f;
-    }
-    #actionsList {
-      flex: 1 1 auto;
-      margin: 0; padding: 0;
-      overflow-y: auto;
-      list-style: none;
-      border: 1px solid #ccc;
-      background: white;
-      max-height: 260px;
-      font-size: 0.9rem;
-    }
-    #actionsList li {
-      padding: 8px 12px;
-      border-bottom: 1px solid #eee;
-    }
-    #actionsList li:last-child {
-      border-bottom: none;
-    }
-    #buttons {
-      padding: 10px 0;
-      display: flex;
-      gap: 8px;
-      justify-content: space-between;
-      background: white;
-      border-top: 1px solid #ccc;
-      margin-top: 8px;
-    }
-    button {
-      flex: 1 1 auto;
-      background: #3f51b5;
-      border: none;
-      color: white;
-      font-weight: 600;
-      padding: 10px 0;
-      border-radius: 4px;
-      cursor: pointer;
-      user-select: none;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background: #2c3e9f;
-    }
-    button:disabled {
-      background: #a3a3c7;
-      cursor: not-allowed;
-    }
-    #codeOutput {
-      margin: 12px 0 0 0;
-      background: #1e1e1e;
-      color: #d4d4d4;
-      font-family: Consolas, 'Courier New', monospace;
-      border-radius: 6px;
-      padding: 10px;
-      max-height: 180px;
-      overflow-y: auto;
-      white-space: pre-wrap;
-      font-size: 12px;
-    }
+    body { margin: 0; font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; width: 400px; min-height: 520px; background: #f9fbfc; color: #222; display: flex; flex-direction: column; padding: 14px; box-sizing: border-box; }
+    #urlSection { display: flex; margin-bottom: 12px; gap: 8px; }
+    #url-input { flex-grow: 1; padding: 8px 8px; font-size: 1rem; border: 1px solid #ddd; border-radius: 4px; background: #fff; }
+    #load-url-button { background: #0066f5; color: white; border: none; padding: 8px 16px; border-radius: 4px; font-weight: 600; cursor: pointer; user-select: none; box-shadow: 0 1px 2px 0 #e2e6ea; transition: background-color 0.2s; }
+    #load-url-button:hover { background: #004fbb; }
+    #actionsList { flex: 1 1 auto; margin: 0; padding: 0; overflow-y: auto; list-style: none; border: 1px solid #eaeef0; background: white; border-radius: 6px; box-shadow: 0 2px 8px rgba(60,80,120,0.06); max-height: 300px; font-size: 1rem; margin-bottom: 12px; }
+    #actionsList li { padding: 12px 14px; border-bottom: 1px solid #f3f5f7; display: flex; flex-direction: column; gap: 6px; }
+    #actionsList li:last-child { border-bottom: none; }
+    .action-header { display: flex; align-items: center; gap: 12px; font-weight: 500; }
+    .elType { color: #2a8cff; font-size: 0.98em; font-weight: 500; border: 1px solid #e7eef8; border-radius: 3px; padding: 0 6px; background: #f6fafd; }
+    .locator-row { display: flex; align-items: center; gap: 6px; margin-top: 2px; }
+    .locator-dropdown { min-width: 90px; border-radius: 4px 0 0 4px; border: 1px solid #c6d2e1; height: 28px; background: #f3f6fa; font-size: 0.98em; cursor: pointer; }
+    .locator-input { flex: 1; border: 1px solid #c6d2e1; border-left: none; border-radius: 0 4px 4px 0; padding: 4px 8px; font-size: 1em; background: #fafdff; }
+    #buttons { padding: 10px 0; display: flex; gap: 10px; justify-content: space-between; margin-top: 10px; }
+    button { flex: 1 1 auto; background: #0066f5; border: none; color: white; font-weight: 600; padding: 10px 0; border-radius: 4px; cursor: pointer; user-select: none; font-size: 1.04em; transition: background 0.2s; }
+    button:hover { background: #004fbb; }
+    button:disabled { background: #a3a3c7; cursor: not-allowed; }
+    #codeOutput { margin: 12px 0 0 0; background: #1e1e1e; color: #d4d4d4; font-family: Consolas, 'Courier New', monospace; border-radius: 6px; padding: 10px; max-height: 180px; overflow-y: auto; white-space: pre-wrap; font-size: 13px; }
+    .scenario-row { display: flex; gap: 7px; margin-bottom: 8px; align-items: center; }
+    #scenarioNameInput { flex: 1; border: 1px solid #c6d2e1; border-radius: 4px; padding: 6px 8px; font-size: 1em; background: #fafdff; }
   </style>
 </head>
 <body>
@@ -106,9 +36,9 @@
   <ul id="actionsList">
     <li>(No actions recorded)</li>
   </ul>
-  <div>
-  <input id = "scenarioNameInput"></input>
-  <button id="scenarioNameBtn" disabled>Scenario Name</button>
+  <div class="scenario-row">
+    <input id="scenarioNameInput" placeholder="Scenario Name" />
+    <button id="scenarioNameBtn" disabled>Scenario Name</button>
   </div>
   <div id="buttons">
     <button id="clearBtn" disabled>Clear</button>
